samples/_failures_safe/1761138845_f73e04_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_54181372.c: In function ‘main’:
./samples/SAFE/__tmp_54181372.c:163:17: error: expected ‘;’ at end of input
  163 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_54181372.c:163:9: error: expected declaration or statement at end of input
  163 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_54181372.c:163:9: error: expected declaration or statement at end of input
